se suben archivos de proyecto

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <form class="col s12">
               <div class="row">
                 <div class="input-field col s12">
-                  <textarea id="textMD" class="materialize-textarea"></textarea>
+                  <textarea id="textMD" class="materialize-textarea" placeholder="Please write your markdown text"></textarea>
                   <label for="textarea1">Textarea</label>
                 </div>
               </div>
@@ -24,6 +24,8 @@
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+    <script src="src/gettingLinksFromMarkdown.js"></script>
     <script src="src/app.js"></script>
+    
 </body>
 </html>
