se arregla conversion de objeto a string para demo, se agregan comandos de test y build, se agregan autores

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Getting links from Markdown</title>
 </head>
 <body>
+    <h1 style="text-align: center">Getting links from Markdown</h1>
     <main class="center-align" style="margin: 10rem">
         <div class="row">
             <form class="col s12">
@@ -20,7 +21,7 @@
             </form>
           </div>
         <a id="btn" class="waves-effect waves-light btn">Getting links</a>
-        <div id="links"></div>
+        <div id="links" style="margin-top: 4rem"></div>
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
