se actualiza estilo del demo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 style="text-align: center">Getting links from Markdown</h1>
-    <main class="center-align" style="margin: 10rem">
+    <main class="center-align" style="margin: 4rem 10rem">
         <div class="row">
             <form class="col s12">
               <div class="row">
